--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs-material
+      - name: Build MkDocs
+        run: mkdocs build --verbose --clean --strict
       - name: Deploy to GitHub Pages
         run: mkdocs gh-deploy --force
