--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,11 @@ jobs:
       - name: Install mkdocs
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs-material
+          pip install mkdocs-material pyyaml
+      - name: Init MkDocs
+        run: |
+          mkdocs new .
+          python .mkdocs/scripts/prepare_docs.py
       - name: Build MkDocs
         run: mkdocs build --verbose --clean --strict
       - name: Deploy to GitHub Pages
