--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10.8'
-      - name: Install mkdocs
+      - name: Install requirements
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs-material pyyaml
