--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install mkdocs-material pyyaml
       - name: Init MkDocs
-        run: |
-          mkdocs new .
-          python .mkdocs/scripts/prepare_docs.py
+        run: python .mkdocs/scripts/prepare_docs.py
       - name: Build MkDocs
         run: mkdocs build --verbose --clean --strict
       - name: Deploy to GitHub Pages
