--- a/.gitignore
+++ b/.gitignore
@@ -154,4 +154,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-
+# for MkDocs
+docs/
+mkdocs.yml
