--- a/.mkdocs/mkdocs.yml
+++ b/.mkdocs/mkdocs.yml
@@ -2,6 +2,10 @@ site_name: My Dialy
 theme:
   name: material
   language: ja
+  palette:
+    scheme: slate
+    primary: blue
+    accent: orange
   features:
     - tabs
 markdown_extensions:
